Add bottom navigation and screen structure: - Implement bottom navigation bar - Add Home, Training, and Nutrition screens - Configure navigation routes - Update Gradle dependencies for Material icons

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,5 +27,18 @@ org.gradle.configuration-cache=true
 org.gradle.caching=true
 # Enable Kotlin incremental compilation
 kotlin.incremental=true
-# Use K2 compiler
-kotlin.experimental.tryK2=true
+# K2 Compiler deaktivieren
+# kotlin.experimental.tryK2=true
+# Logging Optionen
+org.gradle.logging.level=debug
+org.gradle.console=verbose
+
+# Kotlin Compiler Logging
+kotlin.compiler.verbose=true
+
+# Compose Compiler Logging
+android.enableComposeCompilerReports=true
+android.enableComposeCompilerMetrics=true
+
+# Detaillierte Build-Fehler
+org.gradle.warning.mode=all
