Initial commit: MyWorkout App mit Navigation und Room Database

--- a/gradle.properties
+++ b/gradle.properties
@@ -42,3 +42,7 @@ android.enableComposeCompilerMetrics=true
 
 # Detaillierte Build-Fehler
 org.gradle.warning.mode=all
+
+# Fügen Sie diese neuen Zeilen hier am Ende hinzu
+android.defaults.buildfeatures.buildconfig=true
+kapt.use.worker.api=false
