Major update: Added Nutrition tracking features
- Added Nutrition stats screen
- Implemented Room database with converters
- Added unit tests and instrumentation tests
- Updated build configuration
- Added Hilt DI setup
- Improved navigation

--- a/gradle.properties
+++ b/gradle.properties
@@ -46,3 +46,5 @@ org.gradle.warning.mode=all
 # Fügen Sie diese neuen Zeilen hier am Ende hinzu
 android.defaults.buildfeatures.buildconfig=true
 kapt.use.worker.api=false
+android.nonFinalResIds=false
+org.gradle.java.home=C:\\Program Files\\Amazon Corretto\\jdk17.0.13_11
