--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,19 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 \
+--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -45,6 +57,6 @@ org.gradle.warning.mode=all
 
 # Fügen Sie diese neuen Zeilen hier am Ende hinzu
 android.defaults.buildfeatures.buildconfig=true
-kapt.use.worker.api=false
 android.nonFinalResIds=false
 org.gradle.java.home=C:\\Program Files\\Amazon Corretto\\jdk17.0.13_11
+android.enableJetifier=true
